--- a/public/profile.html
+++ b/public/profile.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MojoAuth Demo - Profile</title>
-    <link rel="stylesheet" href="/src/components/profile.css">
-
-
+    <link rel="stylesheet" href="/css/profile.css">
 </head>
 <body>
     <nav class="navbar">
